User creation logic
- UserAccount (domain logic)
- UserAccountEntity (db entity)
- UserRepository
- UserService:
   - createUser domain logic
   - findByEmail method
   - convert user entity to user account

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ build/
 !**/src/test/**/build/
 /src/main/resources/application.properties
 keystore.p12
+notes.txt
+docker-compose.yml
 
 ### STS ###
 .apt_generated
